Fix visibility

--- a/assets/main.css
+++ b/assets/main.css
@@ -451,12 +451,3 @@
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
 }
-
-.long-and-truncated {
-  flex: 1;
-  &, & > * {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
-}
